current SVN:

* Added ncurses C++ headers and library builds for wide character support.
* Make a link ncurses.h -> curses.h.

version 0.1.17:

* Update to LLVM r250619.
* Update to ncurses-6.0.
* Update to libedit-20150325-3.1.

version 0.1.16:

* Update to LLVM r249946.
* Update to LLVM r248750.
* Update to LLVM r248677.
* Update to LLVM r248571.

version 0.1.15:

* Update to LLVM r247783.
* Update to LLVM r247489.
* Update to LLVM r246642.
* Update to QEMU 2.4.0.
* Update to GDB 7.10.
* Update to musl 1.1.11.
* Update to LLVM r246362.
* Update to LLVM r244919.
* Update to LLVM r243216.
* Update to LLVM r242605.
* Update to LLVM r241992.
* Update to LLVM r241406.
* Update to LLVM r240899.
* Update to LLVM r239675.
* Update to LLVM r239219.
* Update to musl 1.1.10.
* Update to LLVM r238653.
* Update to LLVM r238024.
* Update to LLVM r237563.
* Update to LLVM r237533.

version 0.1.14:

* Added an ARMv6 config file: armv6-linux-engeabihf.
* Update to musl 1.1.9.
* Fixed bzip2 build.
* Updated the libunwind build location.
* Update to LLVM r236226.
* Update to QEMU 2.3.0.

version 0.1.13:

* Update to MinGW-w64 4.0.
* Update to LLVM r235585.
* Removed lld for now.
* Update to LLVM r234745.
* Fixed ELK thread scheduler for idle thread.
* Update to GDB 7.9.

version 0.1.12:

* Fixed library builds with binary releases.
* Update to musl 1.1.8.

version 0.1.11:

* Added aarch64 support.
* Update to musl 1.1.7.
* Update to LLVM r232721.

version 0.1.10:

* Updated the compiler-rt build rules.
* Added support for building Cortex-M3 libraries and programs.
* Added missing clang include files.

version 0.1.9:

* Build for Windows using ecc/mingw-w64.
* Update to LLVM r227686.
* Added write example.
* Added missing MinGW libraries to repository.
* Removed extraneous utmpx.c from the musl sources.

version 0.1.8:

* Support for MinGW-w64 compilation.
* Update to QEMU 2.2.0.
* Update to binutils 2.25.
* Update to musl 1.1.6.
* Update to LLVM r226372.