@@ -1,18 +1,15 @@
-bin/*
+bin
 libecc/clang
 libecc/config
 libecc/include
 libecc/mkscripts
 libecc/lib
 libecc/doc
-libecc/doc/index.html
-libecc/doc/menu.css
 libecc/share
-libecc/share/doc
-libecc/share/doc/index.html
 libecc/Makefile
 libecc/Makefile.lib
 libecc/config.musl
-libecc/src/
-libecc/mingw/
-examples/
+libecc/src
+libecc/mingw
+libecc/llvmlinux
+examples
