@@ -1,0 +1,72 @@
+# Cross compiling variables
+ARCH		:= arm
+TARGET		:= arm-linux-engeabihf
+#CROSS_COMPILE	:= arm-linux-gnueabihf-
+
+ELLCC		:= $(shell realpath $(shell pwd)/../../ellcc)
+HOSTCC		:= $(ELLCC)/bin/ecc
+CC		:= $(ELLCC)/bin/ecc -target arm-linux-engeabihf
+
+CPP		:= $(CC) -E
+LD		:= $(ELLCC)/bin/ecc -nostdlib
+
+ifdef ARCH
+export ARCH
+endif
+ifdef CROSS_COMPILE
+export CROSS_COMPILE
+endif
+ifdef CC
+export CC
+endif
+ifdef CPP
+export CPP
+endif
+ifdef LD
+export LD
+endif
+ifdef HOSTCC
+export HOSTCC
+endif
+ifdef O
+export O
+endif
+
+# This allows you to compile out of tree depending on ARCH and CC
+
+# Remove spaces from CC
+#empty		:=
+#space		:= $(empty) $(empty)
+#CC_NOSPACES	:= $(subst $(space),_,$(CC))
+
+# Where to put build output
+#ARCH		?= x86
+#O		:= build/$(ARCH)-$(CC_NOSPACES)
+
+LINUXFLAGS	= CPP="$(CPP)" CC="$(CC)" HOSTCC="$(HOSTCC)" LD="$(LD)"
+linuxmake	= $(MAKE) -f Makefile $(LINUXFLAGS) O=$(1) $(2)
+
+%:
+	@$(call linuxmake,$(O),$@)
+
+%/: force
+	@$(call linuxmake,$(O),$@)
+
+%.o: %.c
+	@$(call linuxmake,$(O),$@)
+
+%.i: %.c
+	@$(call linuxmake,$(O),$@)
+
+%.s: %.c
+	@$(call linuxmake,$(O),$@)
+
+%.s: %.S
+	@$(call linuxmake,$(O),$@)
+
+all:
+	@$(call linuxmake,$(O),$@)
+
+.PHONY: force
+force: ;
+	:
